# chess_analytics

./: .gitignore  .gitmodules  .rustfmt.toml  Cargo.toml  LICENSE  README.md  build.rs  codecov.yaml  renovate.json
.cargo/: config.toml
.github/actions-rs/: grcov.yml
.github/preview/: preview.yml
.github/workflows/: ci.yml  preview.yml
benches/: benchmarks.rs
benches/workflows/: 1_simple_count_10_games.yaml  2_simple_count_eval_and_clock_1_game.yaml  3_count_mates_by_time_10_games.yaml  4_player_elo_tc_bin_1.yaml  5_eval_available_filter.yaml  6_parse_pgn.yaml  7_perfect_checkmate_avg.yaml  8_noop.yaml
example_filters/: basic_elo_filter.json  empty_filter.json  nag_rate_by_elo_filter.json  only_2013_filter.json  queens_gambit_result_rate_filters.json  queenside_mate_only_filter.json
example_workflows/: convert_to_v5.yaml  demo.yaml  demo2.yaml  eco_categories_by_elo.json  eco_categories_by_elo_and_timecontrol.json  eco_categories_over_time.json  empty.json  fen_filter.json  final_fen_search.json  first_move_by_elo_timecontrol.json  game_milestones_by_timecontrol.json  named_openings_by_elo_timecontrol.json  openings_by_elo_timecontrol.json  parse_pgn_for_int_tests.yaml  perfect_checkmate.yaml  promotions_and_move_data_by_elo_timecontrol.json  queens_gambit_rate_over_time.json  queens_gambit_rate_over_time_and_timecontrol.json  queenside_mates.json  simple_count.json
scripts/: bench_diff.sh  check_for_regressions.py  install-flatbuffers.sh  outdated_to_matrix.py  update_outdated.sh
src/: analysis_def.rs  arguments.rs  basic_types.rs  bins.rs  board.rs  chess.fbs  chess_utils.rs  data_containers.rs  database.rs  filters.rs  folds.rs  game.rs  game_wrapper.rs  general_utils.rs  generic_steps.rs  lib.rs  macros.rs  main.rs  maps.rs  parse_pgn.rs  statistics.rs  step_param_utils.rs  steps.rs  steps_manager.rs  types.rs  utils.rs  workflow.rs  workflow_step.rs
src/basic_types/: annotation.rs  cell.rs  chess_move.rs  file.rs  game_result.rs  nag.rs  optional_piece.rs  partial_cell.rs  path.rs  piece.rs  player.rs  player_piece.rs  rank.rs  termination.rs  time_control.rs
src/bins/: bin_defs.rs
src/filters/: filter_defs.rs
src/generic_steps/: generic_filter.rs
src/statistics/: folds.rs  maps.rs
src/steps/: avg_reduce.rs  bz2_decompress_step.rs  checkmate_filter.rs  clear_vector_step.rs  count_map.rs  count_vec_step.rs  eval_available_filter.rs  export_games.rs  file_count_step.rs  game_elo_bin.rs  glob_file_step.rs  glob_file_step_2.rs  init_bins_step.rs  labelled_print_step.rs  max_moves_filter.rs  max_reduce.rs  min_moves_filter.rs  mod.rs  monitor_step.rs  noop_step.rs  parallel_step.rs  parse_bin_game_step.rs  parse_pgn_step.rs  perfect_checkmate_map.rs  player_elo_filter.rs  raw_byte_counter_step.rs  save_data_step.rs  sum_reduce.rs  time_control_bin.rs  ui_monitor_step.rs  usize_print_step.rs
test_data/: simple_count_eval_and_clock_1_game.bin.bz2  test_set_1.bin.bz2
tests/: integration_tests.rs  ut_game_result.rs
tests/data/: 2013-01_000000.bin.bz2  games_ending_in_mates.bin.bz2  games_ending_in_mates.pgn  (+7 more)
(+47 files in other folders)
