[package]
name = "chess_analytics"
version = "0.1.0"
authors = ["Sam Goldman <sgoldman216@gmail.com>"]
edition = "2021"

[lib]
name = "chess_analytics"
path = "src/lib.rs"
bench = false

[[bin]]
name = "chess_analytics"
path = "src/main.rs"
bench = false

[dependencies]
regex = "1.8.1"
glob = "0.3.1"
bzip2 = "0.4.4"
rayon = "1.7.0"
serde = { version = "1.0.162", features = ["derive"] }
serde_yaml = "0.9.21"
itertools = "0.10.4"
mockall = "0.11.4"
mockall_double = "0.3.0"
tui = "0.19.0"
termion = "2.0.1"
postcard = { version = "1.0.4", features = ["alloc"] }
packed_struct = "0.10.1"
crossterm = "0.26.1"
# mutagen = { path = "../mutagen/mutagen", optional = true }
mutagen = { git = "https://github.com/llogiq/mutagen", optional = true }
sysinfo = "0.29.0"

[dev-dependencies]
predicates = "2.1.5"
criterion = { version = "0.4", features = ["html_reports"] }

[profile.dev]
opt-level = 3

[[bench]]
name = "benchmarks"
harness = false

[features]
with_mutagen = ["mutagen"]
